--- a/Github-Finder/package.json
+++ b/Github-Finder/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "8.1.0",
     "css-loader": "^4.2.1",
+    "file-loader": "^6.2.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^1.2.1",
@@ -25,6 +26,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "bootstrap": "4.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
