github_finder w/hooks

--- a/React-Hooks/Github-Finder-with-hooks/package.json
+++ b/React-Hooks/Github-Finder-with-hooks/package.json
@@ -18,6 +18,9 @@
     "babel-loader": "8.1.0",
     "css-loader": "^4.2.1",
     "file-loader": "^6.2.0",
+    "prettier-eslint": "^15.0.1",
+    "prettier-eslint-cli": "^6.0.1",
+    "prettier-stylelint": "^0.4.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^1.2.1",
